--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@
       background-color: #000;
     }
 
-    h1, .logo, .top-cta, .main-cta {
-      /* Use a different font for headings and buttons */
-      font-family: 'Montserrat', sans-serif;
-    }
-
+    /* The hero section uses a large background image */
     .hero {
-      /* Set a background image for the hero section */
-      background-image: url('https://charitywater.dropmark.com/993072/34019559');
-      background-size: cover;
-      background-position: center;
-      height: 100vh;
+      /* Show a big image at the top of the page */
+      background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80');
+      background-size: cover; /* Make the image cover the whole area */
+      background-position: center; /* Center the image */
+      height: 100vh; /* Make the hero section fill the screen */
       position: relative;
       display: flex;
       align-items: center;
@@ -40,8 +36,8 @@
       padding-left: 10%;
     }
 
+    /* Add a dark overlay so text is easy to read */
     .overlay {
-      /* Add a dark overlay to make text easier to read */
       position: absolute;
       top: 0;
       left: 0;
@@ -51,8 +47,8 @@
       z-index: 1;
     }
 
+    /* Main content on top of the hero image */
     .content {
-      /* Style the main content area */
       position: relative;
       z-index: 2;
       max-width: 500px;
@@ -61,8 +57,8 @@
       margin-left: 0;
     }
 
+    /* Logo in the top left corner */
     .logo {
-      /* Style the logo in the top left */
       position: absolute;
       top: 20px;
       left: 20px;
@@ -76,7 +72,6 @@
     }
 
     .logo span {
-      /* Highlight the checkmark in the logo */
       background-color: #fbd104;
       color: black;
       padding: 4px 8px;
@@ -85,8 +80,8 @@
       font-weight: bold;
     }
 
+    /* Top call-to-action button */
     .top-cta {
-      /* Style the top call-to-action button */
       position: absolute;
       top: 20px;
       right: 20px;
@@ -97,23 +92,26 @@
       border-radius: 4px;
       font-weight: bold;
       cursor: pointer;
+      font-family: 'Montserrat', sans-serif;
     }
 
+    /* Main heading style */
     h1 {
-      /* Style the main heading */
+      font-family: 'Montserrat', sans-serif;
       font-size: 3rem;
       margin-bottom: 20px;
     }
 
+    /* Paragraph style */
     p {
-      /* Style the paragraph text */
       font-size: 1.2rem;
       margin-bottom: 20px;
       color: #eee;
     }
 
+    /* Main call-to-action button */
     .main-cta {
-      /* Style the main call-to-action button */
+      font-family: 'Montserrat', sans-serif;
       background-color: #fbd104;
       color: black;
       padding: 12px 20px;
@@ -124,8 +122,8 @@
       cursor: pointer;
     }
 
+    /* Make the layout responsive for small screens */
     @media (max-width: 600px) {
-      /* Make the layout responsive for small screens */
       .hero {
         justify-content: center;
         padding-left: 0;
@@ -166,5 +164,7 @@
       <button class="main-cta">$5 = Clean Water. That’s It.</button>
     </div>
   </section>
+</body>
+</html>
 </body>
 </html>
