edited subheadline to fit screen

--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
     <!-- Main content: heading, description, and main button -->
     <div class="content">
       <h1>Small Act.<br />Big Impact.</h1>
-      <p>charity: water makes it simple to change lives.<br />Starting with clean water.</p>
+      <p>charity: water makes it simple to change lives. Starting with clean water.</p>
       <button class="main-cta">$5 = Clean Water. That’s It.</button>
     </div>
   </section>
